# canonical-huffman

./: CMakeLists.txt  README.md  README_cn.md  huffman_coder.cpp  roi_huffman.cpp
detector/: det.py
inc/: bit_reader.hpp  canonical_coder.hpp
workdir/: huffcode  roi_huffman
workdir/detector/: det.py
workdir/misc/: test_text.txt
